# regime-benchmark

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
config/: labeling_config.yaml
docs/: design.md  requirements.md
migrations/: 000_init_roles.sql  001_init.sql
scripts/: bootstrap_db.sh
src/regime_benchmark/: __init__.py  calibration.py  config.py  pipeline.py
src/regime_benchmark/diagnostics/: __init__.py  asymmetry.py  cost.py  er_corr.py  jump.py  lag.py
src/regime_benchmark/direction/: __init__.py  dc_engine.py  segments.py
src/regime_benchmark/ingest/: __init__.py  binance.py
src/regime_benchmark/labeling/: __init__.py  assemble.py
src/regime_benchmark/persistence/: __init__.py  loader.py  schema.py
src/regime_benchmark/quality/: __init__.py  checks.py
src/regime_benchmark/transform/: __init__.py  price.py
src/regime_benchmark/validation/: __init__.py  report.py
src/regime_benchmark/volatility/: __init__.py  realized.py
tests/: test_config.py  test_dc_engine.py  test_diagnostics.py  test_ingest.py  test_invariants.py  test_persistence_roundtrip.py  test_pipeline_calibration.py  test_quality.py  test_synthetic_cases.py  test_transform.py  test_validation_report.py
