[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regime-benchmark"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars",
    "numpy",
    "psycopg[binary]>=3",
    "pydantic>=2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regime_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: long-running backtests; excluded by the test-gate Stop hook",
]
